# ifenum

./: .gitignore  CMakeLists.txt  README.md  ifenum.kdev4  ifenum_config.h.in  main.cpp
